GORA-678 Upgrade to JDK11